--- a/scss/page/home/_stuff-i-do.scss
+++ b/scss/page/home/_stuff-i-do.scss
@@ -2,141 +2,12 @@
 
 @mixin render() {
   #stuff-i-do {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     animation: load-in 0.5s ease;
+    container-type: inline-size;
 
     .ms-title-bar {
       margin: 0;
       padding: 0;
-    }
-
-    .services-list {
-      width: 100%;
-      display: flex;
-      flex-flow: var(--direction, row) nowrap;
-      gap: himig.primitive-token-get('gap.lg');
-      overflow-x: var(--overflow, auto);
-      overflow-y: hidden;
-      margin: 0 auto;
-      padding: 0 0 himig.primitive-token-get('padding.md');
-      text-align: center;
-
-      scrollbar-width: none !important;
-      &::-webkit-scrollbar-track {
-        background: rgba(0 0 0 / 0) !important;
-      }
-
-      @include himig.breakpoint-create('medium') {
-        justify-content: center;
-      }
-
-      .services-list__item {
-        width: max-content;
-        position: relative;
-        color: var(--ink, #{himig.token-get('surface-200')});
-        transition: all var(--ms-transition-time) ease;
-        white-space: nowrap;
-        list-style: none;
-        cursor: pointer;
-
-        &:hover {
-          --ink: #fff;
-        }
-
-        &.is-active {
-          --ink: #fff;
-
-          &::before {
-            content: '';
-            width: 100%;
-            height: 2px;
-            position: absolute;
-            bottom: -0.3rem;
-            left: 0;
-            background-color: himig.token-get('accent-400');
-            animation: show-lines 0.3s ease;
-            transform-origin: left;
-          }
-        }
-      }
-    }
-
-    .services-list__carousel {
-      display: grid;
-      grid-auto-flow: column;
-      grid-auto-columns: 100%;
-      border-radius: 0.5rem;
-      overflow-x: auto;
-      overflow-y: hidden;
-      scroll-snap-type: x mandatory;
-      scrollbar-width: none;
-
-      &::-webkit-scrollbar {
-        appearance: none;
-      }
-
-      & > * {
-        scroll-snap-align: center;
-      }
-
-      & > * + * {
-        margin-block-start: 1rem;
-      }
-
-      .service {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        position: relative;
-        inset: 0;
-        border-radius: 0.5rem;
-        transition: all var(--ms-transition-time) ease;
-
-        img {
-          width: 100%;
-          height: auto;
-          border-radius: 0.5rem;
-          aspect-ratio: 16/9;
-          object-fit: cover;
-          object-position: center;
-        }
-
-        @include himig.breakpoint-create('medium') {
-          &:hover {
-            box-shadow: 0 5px 40px rgba(#fff, 0.1);
-          }
-        }
-
-        .service__content {
-          @include himig.breakpoint-create('medium') {
-            width: 100%;
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            padding: max(1.2rem, 1.5vw);
-            border-radius: 0.5rem;
-            background: linear-gradient(180deg,
-              rgba(#090400, 0%) 0%,
-              rgba(#090400, 60%) 40%,
-              rgba(#090400, 90%) 70%,
-              rgba(#090400, 100%) 100%
-            );
-            z-index: 3;
-
-            > * {
-              max-width: 540px;
-
-              &:is(.ms-button) {
-                max-width: max-content;
-              }
-            }
-          }
-        }
-      }
     }
   }
 }
