--- a/scss/components/_ms-carousel.scss
+++ b/scss/components/_ms-carousel.scss
@@ -1,28 +1,56 @@
-@use '@matteusan/himig';
+@use 'pkg:@matteusan/himig';
 
 @mixin render() {
   .ms-carousel {
+    --ms-viewport-content-limit: 67.3125rem;
+    width: 100%;
     margin: 0 auto;
-    display: grid;
-    grid-template-columns: repeat(#{6}, clamp(325px, 30vw, calc((1077px / 5) * 1.6)));
-    grid-gap: 1rem;
-    overflow-x: auto;
-    overflow-y: visible;
+    gap: himig.primitive-token-get('gap.md');
+    list-style: none;
+    padding-inline-start: calc(50% - var(--ms-viewport-content-limit) / 2);
+    padding-inline-end: calc(50% - var(--ms-viewport-content-limit) / 2);
+    scroll-behavior: smooth;
     scroll-snap-type: x mandatory;
-    scrollbar-width: none !important;
+    overflow: auto hidden;
+    scrollbar-width: var(--ms-viewport-content-limit);
 
     > * {
       scroll-snap-align: center;
     }
 
     &::-webkit-scrollbar-track {
+      width: var(--ms-viewport-content-limit);
       background: rgba(0 0 0 / 0) !important;
     }
+  }
 
-    @include himig.breakpoint-create('large') {
-      overflow-x: auto;
-      overflow-y: visible;
-      grid-template-columns: repeat(3, 1fr);
+  .ms-carousel__item {
+    width: 100%;
+    height: auto;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    inset: 0;
+    transition: all var(--ms-transition-time) ease;
+
+    .ms-carousel__media {
+      width: 100%;
+      aspect-ratio: 16/9;
+      border-radius: 0.5rem;
+      overflow: hidden;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+      }
+    }
+
+    .ms-carousel__content {
+      width: 100%;
     }
   }
 }
