--- a/scss/main.scss
+++ b/scss/main.scss
@@ -74,6 +74,12 @@
     scroll-behavior: smooth;
   }
 
+  body {
+    --body-fill: linear-gradient(12deg, rgba(23,17,17,1), rgba(61,56,56,0.5)),
+    url("data:image/svg+xml,%3Csvg viewBox='0 0 280 280' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='2.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E") !important;
+  }
+
+
   main.content-wrap {
     width: calc(100% - 50px) !important;
   }
