--- a/scss/main.scss
+++ b/scss/main.scss
@@ -206,10 +206,11 @@
   );
 
   .ms-card {
+    --easing: cubic-bezier(0.83, 0, 0.17, 1);
     position: relative;
     border-radius: 0.5rem;
     overflow: hidden;
-    transition: all 0.8s ease;
+    transition: all 0.2s ease;
 
     &:hover {
       box-shadow: 0 5px 40px rgba(#fff, 0.1);
@@ -232,13 +233,12 @@
     .ms-card__media {
       height: auto;
       max-height: 100%;
-      transition: all 0.8s ease;
 
       img {
         width: 100%;
         height: 100%;
         aspect-ratio: 16 / 10;
-        transition: all var(--ms-transition-time) ease;
+        transition: all 0.4s ease;
         -webkit-filter: grayscale(100%);
         object-fit: cover;
         object-position: center;
@@ -259,7 +259,7 @@
         display: flex;
         flex-flow: column nowrap;
         justify-content: flex-start;
-        transition: all 0.8s ease;
+        transition: all 0.8s var(--easing);
 
         @include himig.breakpoint-create('large') {
           position: absolute;
@@ -288,6 +288,7 @@
       display: flex;
       flex-flow: column nowrap;
       justify-content: space-between;
+      transition: all 0.8s var(--easing);
     }
 
     .ms-card__footer {
