--- a/scss/main.scss
+++ b/scss/main.scss
@@ -210,7 +210,7 @@
     position: relative;
     border-radius: 0.5rem;
     overflow: hidden;
-    transition: all 0.2s ease;
+    transition: box-shadow 0.2s ease;
 
     &:hover {
       box-shadow: 0 5px 40px rgba(#fff, 0.1);
@@ -224,6 +224,7 @@
         &:has(.ms-card__media img) {
           .ms-card__details {
             bottom: 0;
+            transform: translateY(0);
             opacity: 1;
           }
         }
@@ -259,7 +260,7 @@
         display: flex;
         flex-flow: column nowrap;
         justify-content: flex-start;
-        transition: all 0.8s var(--easing);
+        transform-origin: bottom;
 
         @include himig.breakpoint-create('large') {
           position: absolute;
@@ -267,7 +268,8 @@
           bottom: -100%;
           left: 0;
           opacity: 0;
-          transition: all 0.3s ease;
+          transform: translateY(100%);
+          transition: all 0.3s var(--easing);
           background: linear-gradient(180deg,
             rgba(#090400, 0%) 0%,
             rgba(#090400, 50%) 15%,
@@ -289,6 +291,7 @@
       flex-flow: column nowrap;
       justify-content: space-between;
       transition: all 0.8s var(--easing);
+      will-change: transform;
     }
 
     .ms-card__footer {
