--- a/scss/components/_ms-header.scss
+++ b/scss/components/_ms-header.scss
@@ -1,8 +1,8 @@
 @use '@matteusan/himig';
 
-$header-fill: 'surface-400' !default;
+$header-fill: linear-gradient(var(--ms-theme-surface-alpha-400) 0%, rgba(255 255 255 / 0) 100%) !default;
 $header-ink: 'surface-ink' !default;
-$header-border: $header-fill !default;
+$header-border: 'surface-alpha-400' !default;
 
 $header-un-scrolled-fill: transparent !default;
 $header-un-scrolled-ink: 'accent-ink' !default;
@@ -11,29 +11,43 @@ $header-un-scrolled-border: $header-un-scrolled-fill !default;
 $header-size: himig.primitive-token-get('size.xl') !default;
 
 $header-style: 'default' !default;
-// $header-breakpoint: 'medium' !default;
 
 @mixin render() {
   .ms-header {
-    width: 100%;
-    height: 55px;
+    width: calc((100% - 50px) + 2em);
+    max-width: calc(#{himig.token-get('viewport-layout-limit')} + 2em);
+    min-height: 56px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     position: fixed;
     top: 0;
     left: 0;
-    padding: 1em 1.5em;
+    right: 0;
+    margin: 0.5em auto;
+    padding: 0.5em 1em;
+    border-radius: himig.primitive-token-get('radius.md');
     z-index: 100;
-    @include himig.prefix(transition, all var(--ms-theme-transition-time) ease);
+    @include himig.prefix(transition, all 0.5s ease);
 
     @include himig.color-apply('header', (
       fill: $header-un-scrolled-fill,
-      ink: $header-un-scrolled-ink,
+      ink: $header-ink,
       border: $header-un-scrolled-border
     ));
 
+    @include himig.struct-apply('header', (
+      border-width: 'xs',
+      border-style: 'solid'
+    ));
+
     &.is-scrollable {
+      &:has(.ms-navbar.is-open) {
+        .ms-header__brand {
+          --ms-header-brand-visibility: none !important;
+        }
+      }
+
       &:not(.is-scrolled) {
         .ms-list__item {
           --ms-list-item-fill: var(--ms-theme-surface-alpha-400) ;
@@ -48,23 +62,24 @@ $header-style: 'default' !default;
 
       &.is-scrolled {
         @include himig.color-bind('header', (
-          fill: linear-gradient(var(--ms-theme-surface-alpha-400) 0%, rgba(255 255 255 / 0) 100%),
+          fill: $header-fill,
           ink: $header-ink,
+          border: $header-border
         ));
+
         backdrop-filter: blur(8px);
-        // filter: linear-gradient(var(--ms-theme-surface-alpha-400) 0%, rgba(255 255 255 / 0) 100%);
         --ms-header-brand-visibility: block;
       }
     }
 
     &:not(.is-scrollable) {
       @include himig.color-bind('header', (
-        fill: linear-gradient(var(--ms-theme-surface-alpha-400) 0%, rgba(255 255 255 / 0) 100%),
+        fill: $header-fill,
         ink: $header-ink,
+        border: $header-border
       ));
       backdrop-filter: blur(8px);
       --ms-header-brand-visibility: block;
-      // filter: linear-gradient(var(--ms-theme-surface-alpha-400) 0%, rgba(255 255 255 / 0) 100%);
     }
 
     .ms-header__brand {
@@ -83,11 +98,14 @@ $header-style: 'default' !default;
         user-select: none;
         letter-spacing: himig.to-rem(-3px);
         @include himig.struct-shadow('header-title', 'high');
-
-        @include himig.breakpoint-create('large') {
-          // --ms-header-brand-visibility: block;
-        }
       }
+    }
+
+    .ms-header__actions {
+      display: flex;
+      flex-flow: row-reverse nowrap;
+      align-items: center;
+      gap: 0.5rem;
     }
   }
 }
