--- a/scss/main.scss
+++ b/scss/main.scss
@@ -61,7 +61,9 @@
       'ink': #da6e28,
     ),
     'accent-gradient': linear-gradient(45deg, #c43e00 0%, #ffa040 100%),
-    'transition-time': 0.2s
+    'transition-time': 0.2s,
+    'viewport-layout-limit': 1477px,
+    'viewport-content-limit': 67.3125rem
   )
 ) {
   #__next {
@@ -79,9 +81,9 @@
     url("data:image/svg+xml,%3Csvg viewBox='0 0 280 280' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='2.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E") !important;
   }
 
-
   main.content-wrap {
     width: calc(100% - 50px) !important;
+    @include himig.key-bind('content-wrap-max-width', 'viewport-content-limit');
   }
 
   ::-moz-selection,
@@ -238,14 +240,14 @@
       img {
         width: 100%;
         height: 100%;
-        aspect-ratio: 16 / 10;
+        aspect-ratio: var(--ms-card-aspect-ratio, 16 / 8);
         transition: all 0.4s ease;
         -webkit-filter: grayscale(100%);
         object-fit: cover;
         object-position: center;
 
         @include himig.breakpoint-create('large') {
-          // aspect-ratio: 4 / 3;
+          --ms-card-aspect-ratio: 16 / 10;
         }
       }
     }
@@ -375,6 +377,30 @@
   // Markdown components
   @include preview-image.render();
 
+  .grain {
+    z-index: 0;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    position: fixed;
+    inset: 0;
+    overflow: hidden;
+
+    .grain-image {
+      background-image: url('/img/grain.png');
+      background-position: 50%;
+      background-size: 256px;
+      flex: none;
+      width: 300%;
+      max-width: none;
+      height: 300%;
+      position: absolute;
+      inset: -150% 0% 0% -150%;
+      opacity: 0.65;
+      animation: 2s steps(1) infinite noise;
+    }
+  }
+
   @keyframes load-in {
     0% {
       opacity: 0;
@@ -396,6 +422,43 @@
     100% {
       opacity: 0;
       transform: translateY(20px);
+    }
+  }
+
+  @keyframes fix-z-index {
+    0%, 100% { z-index: 1; }
+  }
+
+  @keyframes noise {
+    0%, 100% {
+      background-position: 0 0;
+    }
+    10% {
+      background-position: -5% -10%;
+    }
+    20% {
+      background-position: -15% 5%;
+    }
+    30% {
+      background-position: 7% -25%;
+    }
+    40% {
+      background-position: 20% 25%;
+    }
+    50% {
+      background-position: -25% 10%;
+    }
+    60% {
+      background-position: 15% 5%;
+    }
+    70% {
+      background-position: 0 15%;
+    }
+    80% {
+      background-position: 25% 35%;
+    }
+    90% {
+      background-position: -10% 10%;
     }
   }
 }
