--- a/scss/components/_ms-navbar.scss
+++ b/scss/components/_ms-navbar.scss
@@ -28,10 +28,10 @@
   .ms-navbar {
     position: absolute;
     opacity: 0;
-    transform: scaleX(0);
     transform-origin: right;
     transition: all 0.3s ease;
-    right: 2rem;
+    top: 66px;
+    right: 0;
     z-index: 90;
 
     .ms-list {
@@ -112,9 +112,8 @@
     }
 
     &.is-open {
-      right: 5rem;
+      right: 1em;
       opacity: 1;
-      transform: scaleX(1);
     }
   }
 }
