--- a/scss/page/home/_stuff-i-do.scss
+++ b/scss/page/home/_stuff-i-do.scss
@@ -37,9 +37,9 @@
     .service-card {
       --easing: cubic-bezier(0.83, 0, 0.17, 1);
       width: calc(100% - 50px);
-      max-width: 670px;
+      max-width: 640px;
       position: relative;
-      aspect-ratio: 16/10;
+      aspect-ratio: himig.key-create('service-card-aspect-ratio', 16 / 11);
       border-radius: himig.primitive-token-get('radius.md');
       overflow: hidden;
       transition: z-index 0.5s ease,
@@ -48,7 +48,7 @@
       .service-card__media {
         width: 100%;
         height: 100%;
-        aspect-ratio: 16/10;
+        aspect-ratio: himig.key-create('service-card-aspect-ratio', 16 / 11);
         overflow: hidden;
 
         img {
@@ -59,7 +59,13 @@
         }
       }
 
+      @include himig.breakpoint-create('medium') {
+        @include himig.key-bind('service-card-aspect-ratio', 16 / 10);
+      }
+
       @include himig.breakpoint-create('large') {
+        @include himig.key-bind('service-card-aspect-ratio', 16 / 9);
+
         &:hover {
           z-index: 1;
           transform: scale(1.05) translateY(-20px) rotateZ(var(--rotate-z, 0)) !important;
@@ -93,7 +99,7 @@
         padding: himig.primitive-token-get('padding.xl');
         border-radius: himig.primitive-token-get('radius.md');
         border: 1px solid himig.token-get('primary-400');
-        background: #{rgba(#090400, 70%)};
+        background: #{rgba(#090400, 80%)};
         backdrop-filter: blur(8px);
         transition: opacity 0.5s ease,
                     transform 0.3s var(--easing);
